@@ -189,10 +189,6 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.games.pong.CPPongGame</mainClass>
-                            <arguments>
-                                <argument>--add-opens</argument>
-                                <argument>javafx.media/com.sun.javafx.application=ALL-UNNAMED</argument>
-                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -209,10 +205,6 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.games.mir.MirGame</mainClass>
-                            <arguments>
-                                <argument>--add-opens</argument>
-                                <argument>javafx.media/com.sun.javafx.application=ALL-UNNAMED</argument>
-                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -229,10 +221,6 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.games.bird.CPBirdGame</mainClass>
-                            <arguments>
-                                <argument>--add-opens</argument>
-                                <argument>javafx.media/com.sun.javafx.application=ALL-UNNAMED</argument>
-                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -249,10 +237,6 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.games.snake.CPSnakeGame</mainClass>
-                            <arguments>
-                                <argument>--add-opens</argument>
-                                <argument>javafx.media/com.sun.javafx.application=ALL-UNNAMED</argument>
-                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -269,10 +253,6 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.games.macarena.CPMacarenaGame</mainClass>
-                            <arguments>
-                                <argument>--add-opens</argument>
-                                <argument>javafx.media/com.sun.javafx.application=ALL-UNNAMED</argument>
-                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -289,10 +269,6 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.animation.CPAnimationExample</mainClass>
-                            <arguments>
-                                <argument>--add-opens</argument>
-                                <argument>javafx.media/com.sun.javafx.application=ALL-UNNAMED</argument>
-                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -309,10 +285,6 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.camera.CPCameraExample</mainClass>
-                            <arguments>
-                                <argument>--add-opens</argument>
-                                <argument>javafx.media/com.sun.javafx.application=ALL-UNNAMED</argument>
-                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -329,10 +301,6 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.canvas.CPCanvasExample</mainClass>
-                            <arguments>
-                                <argument>--add-opens</argument>
-                                <argument>javafx.media/com.sun.javafx.application=ALL-UNNAMED</argument>
-                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -349,10 +317,6 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.fonts.CPFontsExample</mainClass>
-                            <arguments>
-                                <argument>--add-opens</argument>
-                                <argument>javafx.media/com.sun.javafx.application=ALL-UNNAMED</argument>
-                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -369,10 +333,6 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.image.CPImageFormatsExample</mainClass>
-                            <arguments>
-                                <argument>--add-opens</argument>
-                                <argument>javafx.media/com.sun.javafx.application=ALL-UNNAMED</argument>
-                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -389,10 +349,6 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.image.CPImageCarouselExample</mainClass>
-                            <arguments>
-                                <argument>--add-opens</argument>
-                                <argument>javafx.media/com.sun.javafx.application=ALL-UNNAMED</argument>
-                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -409,10 +365,6 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.particle.CPParticleExample</mainClass>
-                            <arguments>
-                                <argument>--add-opens</argument>
-                                <argument>javafx.media/com.sun.javafx.application=ALL-UNNAMED</argument>
-                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -429,10 +381,6 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.shader.CPShaderExample</mainClass>
-                            <arguments>
-                                <argument>--add-opens</argument>
-                                <argument>javafx.media/com.sun.javafx.application=ALL-UNNAMED</argument>
-                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -449,10 +397,6 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.shader.CPSlideShaderExample</mainClass>
-                            <arguments>
-                                <argument>--add-opens</argument>
-                                <argument>javafx.media/com.sun.javafx.application=ALL-UNNAMED</argument>
-                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -469,10 +413,6 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.sound.CPSoundExample</mainClass>
-                            <arguments>
-                                <argument>--add-opens</argument>
-                                <argument>javafx.media/com.sun.javafx.application=ALL-UNNAMED</argument>
-                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -489,10 +429,6 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.textinput.CPTextInputExample</mainClass>
-                            <arguments>
-                                <argument>--add-opens</argument>
-                                <argument>javafx.media/com.sun.javafx.application=ALL-UNNAMED</argument>
-                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -509,10 +445,6 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.tilemapper.CPTileMapperExample</mainClass>
-                            <arguments>
-                                <argument>--add-opens</argument>
-                                <argument>javafx.media/com.sun.javafx.application=ALL-UNNAMED</argument>
-                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -529,10 +461,6 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.examples.video.CPVideoExample</mainClass>
-                            <arguments>
-                                <argument>--add-opens</argument>
-                                <argument>javafx.media/com.sun.javafx.application=ALL-UNNAMED</argument>
-                            </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
